--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                     <tr class="odd">
                         <td class="select-checkbox"></td>
                         <td class="articleIdTd">{{ article.id }}</td>
-                        <td>{{ article.title }}</td>
+                        <td>{{ article.name }}</td>
                         <td>{{ article.created_date }}</td>
                     </tr>
                     {% endfor %}
