--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <div class="buttonBox">
             <button class="addButton" id="addRow">
                 <i class="fas fa-solid fa-plus" style="color: #fff;"></i>
-                Satır Ekle
+                Satır Eklee
             </button>
             <button class="removeButton" id="allRemove">
                 <i class="fas fa-trash" style="color: #fff;"></i>
