--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <div class="buttonBox">
             <button class="addButton" id="addRow">
                 <i class="fas fa-solid fa-plus" style="color: #fff;"></i>
-                Satır Eklee
+                Domain Ekle
             </button>
             <button class="removeButton" id="allRemove">
                 <i class="fas fa-trash" style="color: #fff;"></i>
@@ -26,7 +26,7 @@
                             <input type="checkbox" id="checkAllProducts" onclick="">
                         </th>
                         <th class="articleIdTh">ID</th>
-                        <th>Başlık</th>
+                        <th>Domain Adı</th>
                         <th>Eklenme Tarihi</th>
                     </tr>
                 </thead>
