--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <div class="title" style="text-align: center;">
         <h2>INFINITUM</h2>
         <h3>CASE STUDY</h3>
+        <h4>{{ request.build_absolute_uri }}</h4>
     </div>
     <div class="box">
         <div class="buttonBox">
