--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 .title{color: red;}
+li{list-style: none;}
 #dataTable{width: 100%!important; color: #000;}
 #dataTable tbody tr td,
 #dataTable thead tr th{background: none; text-align: center;}
@@ -6,7 +7,9 @@
 .buttonBox{padding: 20px; width: 100%; display: flex; justify-content: flex-start; gap: 20px;}
 #addRow{border: 0px solid; border-radius: 6px; padding: 6px; background-color: #11101d; color: #fff; font-size: 14px; font-weight: 600; cursor: pointer;}
 #allRemove{display: none; border: 0px solid; border-radius: 6px; padding: 6px; background-color: #ff6961; color: #fff; font-size: 14px; font-weight: 600; cursor: pointer;}
-#subList{border: 0px solid; border-radius: 6px; padding: 6px; background-color: #11101d; color: #fff; font-size: 14px; font-weight: 600; cursor: pointer;}
+#subList,
+#nsList,
+#rnList{border: 0px solid; border-radius: 6px; padding: 6px; background-color: #11101d; color: #fff; font-size: 14px; font-weight: 600; cursor: pointer;}
 .articleIdTh,
 .articleIdTd{display: none;}
 .selectorBox{padding: 20px;}
