--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <div class="title" style="text-align: center;">
         <h2>INFINITUM</h2>
         <h3>CASE STUDY</h3>
-        <h4>{{ request.build_absolute_uri }}</h4>
+        <h4>API URL: <a href="http://{{ request.get_host }}/restapi/domains/" target="_blank">http://{{ request.get_host }}/restapi/domains/</a></h4>
     </div>
     <div class="box">
         <div class="buttonBox">
@@ -27,9 +27,12 @@
                             <input type="checkbox" id="checkAllProducts" onclick="">
                         </th>
                         <th class="articleIdTh">ID</th>
-                        <th>Domain Adı</th>
+                        <th>Domain</th>
                         <th>Subdomain</th>
-                        <th>Eklenme Tarihi</th>
+                        <th>Creation Date</th>
+                        <th>Expiration Date</th>
+                        <th>Name Servers</th>
+                        <th>Registrant Name</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -45,7 +48,22 @@
                                 Subdomain Listesi
                             </button>
                         </td>
-                        <td>{{ domain.created_date }}</td>
+                        <td>{{ domain.creation_date}}</td>
+                        <td>{{ domain.expiration_date}}</td>
+                        <td>
+                            <button class="nsList" id="nsList"
+                                onclick="nsFunction('{{ domain.name }}', '{{ request.get_host}}')">
+                                <i class="fas fa-solid fa-list" style="color: #fff;"></i>
+                                Name Servers Listesi
+                            </button>
+                        </td>
+                        <td>
+                            <button class="rnList" id="rnList"
+                                onclick="nsFunction('{{ domain.name }}', '{{ request.get_host}}')">
+                                <i class="fas fa-solid fa-list" style="color: #fff;"></i>
+                               Registrant Name
+                            </button>
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -57,29 +75,5 @@
     </div>
 </div>
 
-<script>
-    function subFunction(dom, host) {
-        //var myObject = {'username': 'admin', 'password': 'administration'};
-        //$.getJSON('http://' + host + 'restapi/domains/?name=google.com', myObject, function(data) {});
-        $.ajax({
-            type: "GET",
-            url: "http://" + host + "/restapi/domains/?type=json&name=" + dom,
-            data: { get_param: 'value' },
-            dataType: 'json',
-            success: function (data) { 
-                Swal.fire({
-                    html:data["results"][0]["subdomains"],
-                    confirmButtonText: 'Kapat',
-                })
-            },
-            error: function(error){
-                console.log("Error:");
-                console.log(error);
-            }
-        });
-        //Swal.fire({html:dom})
-    };
-    
-</script>
 
 {% endblock  %}
