--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <div class="content">
     <div class="title" style="text-align: center;">
         <h2>INFINITUM</h2>
-        <h3>CASE STUDY</h3>
+        <h3>DOMAIN FINDER</h3>
         <h4>API URL: <a href="http://{{ request.get_host }}/restapi/domains/" target="_blank">http://{{ request.get_host }}/restapi/domains/</a></h4>
     </div>
     <div class="box">
