--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
                         </td>
                         <td>
                             <button class="rnList" id="rnList"
-                                onclick="nsFunction('{{ domain.name }}', '{{ request.get_host}}')">
+                                onclick="rnFunction('{{ domain.name }}', '{{ request.get_host}}')">
                                 <i class="fas fa-solid fa-list" style="color: #fff;"></i>
                                Registrant Name
                             </button>
